<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2016 The TensorFlow Authors. All Rights Reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="app_name">Pixqui</string>
    <string name="empty"></string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="strNombre">Nombre</string>
    <string name="strApellidos">Apellidos</string>
    <string name="strCorreo">Correo electronico</string>
    <string name="strPassword">Contraseña</string>
    <string name="strPasswordConfirm">Confirma Contraseña</string>
    <string name="siguiente">Siguiente</string>
    <string name="aceptar">Aceptar</string>
    <string name="strFrontCamera">Usar Camara Frontal</string>
    <string name="strBackCamera">Usar Camara Principal</string>
    <string name="strFinalJPG">Fotografia</string>
    <string name="strFinalMPG">Video</string>

</resources>
