<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:weightSum="100"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:orientation="vertical"
        android:weightSum="100"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:background="@drawable/editext_line"
                android:inputType="textCapWords|textNoSuggestions"
                android:singleLine="true"
                android:hint="@string/strNombre"
                android:textColorHint="@color/gray"
                android:text="Hugo Miguel Gallardo Arvizu"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:background="@drawable/editext_line"
                android:hint="@string/strCorreo"
                android:textColorHint="@color/gray"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:text="hgallardo@hotmail.com"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:background="@drawable/editext_line"
                android:hint="@string/strPassword"
                android:textColorHint="@color/gray"
                android:text="12345678"
                android:singleLine="true" />
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/llyBoton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal"
        android:padding="30dp"
        android:gravity="center">

        <com.unstoppable.submitbuttonview.SubmitButton
            android:id="@+id/btnRegistrar"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:padding="25dp"
            app:buttonText="Agregar"
            app:buttonTextSize="25sp"
            app:buttonColor="@color/blueBorders"
            />
    </LinearLayout>
</LinearLayout>
