<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="100"
        android:gravity="center" >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/pixqui_logo_no_text"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="29sp"
            android:textColor="@color/black"

            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:text="Crear cuenta"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:orientation="vertical"
        android:weightSum="100"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:background="@drawable/editext_line"
                android:inputType="textCapWords|textNoSuggestions"
                android:singleLine="true"
                android:hint="@string/strNombre"
                android:textColorHint="@color/gray"
                android:text="Hugo Miguel Gallardo Arvizu"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:background="@drawable/editext_line"
                android:hint="@string/strCorreo"
                android:textColorHint="@color/gray"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:text="hgallardo@hotmail.com"/>
        </RelativeLayout>

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:background="@drawable/editext_line"
            android:hint="@string/strPassword"
            android:textColorHint="@color/gray"
            android:text="12345678"
            android:singleLine="true" />
    </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edtPasswordConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:background="@drawable/editext_line"
                android:hint="@string/strPasswordConfirm"
                android:textColorHint="@color/gray"
                android:singleLine="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blueButtonsText"
                android:text="Ver Aviso de Privacidad"/>

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llyBoton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:gravity="center">
        <com.spark.submitbutton.SubmitButton
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Registrar"
            android:textColor="@color/gray"
            app:sub_btn_background="@color/white"
            app:sub_btn_duration="3000"
            app:sub_btn_line_color="@color/blueBorders"
            app:sub_btn_ripple_color="@color/blueBorders"
            app:sub_btn_tick_color="@color/white" />
    </LinearLayout>
</LinearLayout>